# fp-interpreter

./: Cargo.toml
src/: bool_fns.rs  bool_test.rs  functional_forms.rs  functions.rs  main.rs  sets.rs
