[package]
name = "fp"
version = "0.1.0"
authors = ["dikeal01 <alexander.dikelsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lalrpop-util = "0.19.5"
regex = "1"
itertools = "0.10.0"
lazy_static = "1.4.0"

[build-dependencies]
# lalrpop = "0.19.5"
